# sample-project

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  index.rst  sample_project.main.rst  sample_project.rst
src/sample_project/: __init__.py  command.py  main.py
tests/: test_func.py
